# AIsplit

./: .gitignore  README.md  docker-compose.supabase.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  db.py  logging_config.py  main.py  models.py  schemas.py  storage.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_init.py  0002_stem_pitch.py  0003_m6.py  0004_click_offset.py
backend/app/auth/: deps.py  security.py
backend/app/routers/: analysis.py  auth.py  export.py  guide.py  jobs.py  mixes.py  orgs.py  routing.py  setlists.py  songs.py  stems.py
backend/app/worker/: analyze.py  celery_app.py  click.py  pipeline.py  refine.py  separate.py  tasks.py  transpose.py
backend/tests/: conftest.py  test_audio.py  test_auth.py  test_m6.py  test_refine.py  test_songs.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/setlists/: page.tsx
frontend/src/app/setlists/[id]/: page.tsx
frontend/src/app/songs/: page.tsx
frontend/src/app/songs/[id]/: page.tsx
frontend/src/components/: AnalysisPanel.tsx  AppHeader.tsx  ExportPanel.tsx  MixPresets.tsx  MultitrackPlayer.tsx  RoutingPanel.tsx  SectionEditor.tsx  SectionManager.tsx  SongList.tsx  StemWaveform.tsx  UploadDropzone.tsx  ui.tsx
frontend/src/hooks/: useSession.ts
frontend/src/lib/: api.ts  audioEngine.ts  speech.ts  stems.ts  types.ts
frontend/src/stores/: auth.ts  player.ts
